# BlogSrc

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
ArchitectureDispatching/: CMakeLists.txt  ffsll_gnu.cpp  main.cpp
AvxBitmaskDistribute/: BitmaskDistribute.cpp  BitmaskDistribute.h  CMakeLists.txt  main.cpp
AvxBitmaskDistribute/unittest/: BitmaskDistribute_test.cpp
AvxThrottle/: AvxThrottle  CMakeLists.txt  float_crunching.cpp  float_crunching.txt  main.cpp  results.txt
BitSet/: BitSet  CMakeLists.txt  ffsll_gnu.h
BitSet_Popcnt/: CMakeLists.txt  avx2_popcnt.cpp  main.cpp
FastMerge/: CMakeLists.txt  FastMerge.cpp  FastMerge.h
FastMerge/unittest/: FastMerge_test.cpp
FastMerging/: CMakeLists.txt
MultiVersionInline/: CMakeLists.txt  main.cpp
PacketDescriptorsProcessing/: CMakeLists.txt  PacketDescriptor.h  PacketDescriptorPacked.h  PacketDescriptorReordered.h  PacketDescriptorTagged.h  PacketDescriptorWithAssumptions.h  ProcessingBenchmark.h  Utils.cpp  Utils.h  main.cpp  main_DescriptorPacking.cpp  main_DescriptorPrefetching.cpp  results.txt  resultsPrefetching.txt
PacketDescriptorsProcessing/unittest/: PacketDescriptorStamped_test.cpp  PacketDescriptorTagged_test.cpp  PacketDescriptorWithAssumptions_test.cpp
apps/: CMakeLists.txt
apps/AvxBitmaskDistribute/: BitmaskDistribute.cpp  CMakeLists.txt  Queue.h
apps/AvxBitmaskDistribute/unittest/: BitmaskDistribute_test.cpp  CMakeLists.txt
apps/AvxThrottle/: CMakeLists.txt
apps/BitSet_Popcnt/: CMakeLists.txt  avx512_popcnt.cpp  avx_popcnt.h  main.cpp
apps/FastMerge/: CMakeLists.txt  FastMerge.cpp  main.cpp
apps/FastMerge/unittest/: CMakeLists.txt  FastMerge_test.cpp
apps/MultiVersionInline/: CMakeLists.txt  main.cpp  popcount_with_hw_support.cpp
apps/PacketDescriptorsProcessing/: CMakeLists.txt  PacketDescriptorReordered.h  PacketDescriptorStamped.h  PacketDescriptorTagged.h  PacketDescriptorWithAssumptions.h  ProcessingBenchmark.h  main_DescriptorPacking.cpp  main_DescriptorPrefetching.cpp
apps/PacketDescriptorsProcessing/unittest/: CMakeLists.txt  PacketDescriptorStamped_test.cpp  PacketDescriptorTagged_test.cpp  PacketDescriptorWithAssumptions_test.cpp  PacketDescriptorsProcessingUt
apps/PktCount/: CMakeLists.txt  PktCount  PktCount.cpp  PktCount.h  main.cpp
apps/SerialWrite/: BasicWrite.h  BasicWriteBuffer.h  CMakeLists.txt  WriteCombineBuffer.h  main.cpp
utils/: Allocate.cpp  Allocate.h  CMakeLists.txt  Utils.h
